# dorado-scheduling

./: .gitignore  .readthedocs.yml  CHANGES.md  LICENSE.txt  README.md  docs-requirements.txt  pyproject.toml
.github/workflows/: build-and-test.yml  python-publish.yml
doc/: background.rst  conf.py  index.rst  quickstart.rst  requirements.txt
doc/reference/: constraints.rst  fov.rst  index.rst  mission.rst  orbit.rst  skygrid.rst  slew.rst  tesselation.rst  units.rst  utils.rst
doc/tools/: dorado-scheduling-animate-survey.rst  dorado-scheduling-animate.rst  dorado-scheduling-metrics.rst  dorado-scheduling-sim-survey.rst  dorado-scheduling-skygrid.rst  dorado-scheduling-survey-slicer.rst  dorado-scheduling.rst  index.rst
dorado/scheduling/: __init__.py  _slew.py  dust.py  fov.py  mission.py  models.py  orbit.py  regard.py  script.py  skygrid.py  survey.py  tiling.py  utils.py
dorado/scheduling/constraints/: __init__.py  bright_earth_limb.py  earth_limb.py  orbit_night.py  radiation.py  saa.py
dorado/scheduling/data/: L_SAA_2008198.03  README.md  dorado-510km-31inc.tle  dorado-510km-60inc.tle  dorado-510km-sunsync.tle  dorado-625km-31inc.tle  dorado-625km-60inc.tle  dorado-625km-sunsync.tle  goes17.tle  orbits.txt  uvex.tle  uvex.txt  vela1.tle
dorado/scheduling/metrics/: kne.py
dorado/scheduling/orbit/: __init__.py  base.py  spice.py  tle.py
dorado/scheduling/schedulers/: __init__.py  continuous_time_slew.py  discrete_time.py
dorado/scheduling/scripts/: animate.py  animate_skymaps.py  animate_survey.py  main.py  metrics.py  prepare.py  simsurvey.py  skygrid.py  survey.py  survey_slicer.py  tile.py
dorado/scheduling/skygrid/: __init__.py  _geodesic.py  _healpix.py  _sinusoidal.py  _spiral.py
dorado/scheduling/tesselation/: __init__.py  _geodesic.py  _sinusoidal.py  _spiral.py
dorado/scheduling/tests/: test_earth_limb.py  test_orbit.py  test_skygrid.py
dorado/scheduling/units/: __init__.py  equivalencies.py  orbital.py
dorado_observation_planning/: orbit.py
dorado_observation_planning/constraints/: saa.py
dorado_observation_planning/data/: README.md
examples/: 6-5.ecsv  6.ecsv  6.fits  README.rst  config.yaml  plot_filling_factor.py  plot_polar_horns.py  plot_skygrid.py
