[tool.poetry]
name = "dorado-scheduling"
version = "0.1.0"
description = "Dorado observation planning and scheduling simulations"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "NOSA"
readme = "README.md"
packages = [
    {include = "dorado"}]
include = [
    "dorado/scheduling/data/*.txt",
    "dorado/scheduling/data/*.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Astronomy"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"  # cplex does not yet have wheels built for Python 3.9
antiprism-python = "*"
astroplan = ">=0.7"
astropy = "^4.1"
cplex = "*"
docplex = "*"
"ligo.skymap" = "^0.5.0"
healpy = "*"
numpy = "<1.20.0"  # https://git.ligo.org/lscsoft/lalsuite/-/issues/414
seaborn = "*"
shapely = "*"  # for ligo.skymap.plot.poly.cut_prime_meridian
skyfield = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
hypothesis = "*"
ipykernel = "*"
pytest = "*"

# For docs
packaging = "*"
pep517 = "*"
pydata-sphinx-theme = "*"

[tool.poetry.scripts]
dorado-scheduling = "dorado.scheduling.scripts.main:main"
dorado-scheduling-animate = "dorado.scheduling.scripts.animate:main"
dorado-scheduling-tile = "dorado.scheduling.scripts.tile:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
