[tool.poetry]
name = "dorado-scheduling"
version = "0.1.0"
description = "Dorado observation planning and scheduling simulations"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "NOSA"
readme = "README.md"
packages = [
    {include = "dorado"}]
include = [
    "dorado/scheduling/data/*.tle",
    "dorado/scheduling/data/*.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Astronomy"]

[tool.poetry.dependencies]
python = "^3.7, <3.9"  # cplex does not yet have wheels built for Python 3.9
antiprism-python = "*"
astroplan = ">=0.7"
astropy = ">=4.2.1"
astropy-healpix = ">=0.6"
cplex = "*"
docplex = "*"
dust_extinction = "*"
dustmaps = "*"
gwemlightcurves = "*"
healpy = "*"
"ligo.skymap" = "^0.5.2"
radbelt = "*"
seaborn = "*"
sgp4 = "*"
shapely = "*"  # for ligo.skymap.plot.poly.cut_prime_meridian
synphot = "*"

# For docs
packaging = {version="*", optional=true}
pep517 = {version="*", optional=true}
pydata-sphinx-theme = {version="*", optional=true}
sphinx-gallery = {version="*", optional=true}

# For tests
hypothesis = {version="*", optional=true}
pytest = {version="*", optional=true}
pytest-doctestplus = {version="*", optional=true}
skyfield =  {version="*", optional=true}

[tool.poetry.extras]
doc = ["packaging", "pep517", "pydata-sphinx-theme", "sphinx-gallery"]
test = ["hypothesis", "pytest", "pytest-doctestplus", "skyfield"]

[tool.poetry.dev-dependencies]
flake8 = "*"
ipykernel = "*"

[tool.poetry.scripts]
dorado-scheduling = "dorado.scheduling.scripts.main:main"
dorado-scheduling-animate = "dorado.scheduling.scripts.animate:main"
dorado-scheduling-skygrid = "dorado.scheduling.scripts.skygrid:main"
dorado-scheduling-survey-slicer = "dorado.scheduling.scripts.survey_slicer:main"
dorado-scheduling-survey = "dorado.scheduling.scripts.survey:main"
dorado-scheduling-sim-survey = "dorado.scheduling.scripts.simsurvey:main"
dorado-scheduling-animate-survey = "dorado.scheduling.scripts.animate_survey:main"
dorado-scheduling-survey-metrics = "dorado.scheduling.scripts.metrics:main"

[tool.pytest.ini_options]
doctest_optionflags = ["FLOAT_CMP"]
doctest_plus = true
doctest_rst = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
